Fix: 날짜순으로 데이터 가져오도록 수정

--- a/DayPlanner/Views/Base.lproj/Main.storyboard
+++ b/DayPlanner/Views/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="YnW-vh-8rC">
-                        <barButtonItem key="leftBarButtonItem" title="Item" id="QK9-GO-dg4">
+                        <barButtonItem key="leftBarButtonItem" title="Item" changesSelectionAsPrimaryAction="YES" id="QK9-GO-dg4">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="testButton:" destination="Zfe-mP-wYw" id="aft-7R-hvq"/>
